# rust-pdp

./: .gitignore  CLAUDE.md  README.md  eval-dimensions.toml  handoff.txt
benchmarks/: Dockerfile.go-plugin  Dockerfile.pdp-prod  RESULTS.md  batch_stress.sh  bench.toml  cache_effectiveness.sh  concurrent_throughput.sh  docker-compose.go.yml  docker-compose.lua.yml  go_vs_lua.sh  http_load_test.sh  kong-go.yml  reload_spike.sh  stampede_sim.sh  sustained_load.sh
benchmarks/fixtures/: claims_allow.json  claims_deny.json
benchmarks/results/: 20260408T123312_allow_c1.json  20260408T123312_allow_c10.json  20260408T123312_allow_c100.json  20260408T123312_allow_c200.json  20260408T123312_allow_c50.json  20260408T123312_allow_c500.json  20260408T123312_allow_summary.tsv  20260408T123312_deny_c1.json  (+54 more)
docs/: avp-comparison-and-api-compatibility.md  gpt-cross-review.md  prerequisites.md  risk-analysis-and-migration-plan.md  tech-lead-review.md
knowledge/: sources-state.toml  sources.toml
kong-plugin/: schema.lua
kong-plugin-go/: go.mod  main.go  main_test.go
kong-plugin-lua/: handler.lua  schema.lua
pdp/: Cargo.toml
pdp/benches/: avp_format_overhead.rs  batch_throughput.rs  cedar_eval.rs  entity_construction.rs  hierarchy_depth.rs  mixed_workload.rs  rayon_crossover.rs  reload_contention.rs
pdp/examples/: memory_scaling.rs
pdp/policies/: api.cedar  api.cedarschema
pdp/src/: avp.rs  entities.rs  handlers.rs  lib.rs  main.rs  models.rs  policy.rs
pdp/tests/: action_coverage.rs  admin_auth.rs  avp_compat.rs  avp_reload_batch.rs  avp_security.rs  avp_stress.rs  concurrency.rs  diagnostics.rs  edge_cases.rs  entity_pathological.rs  integration.rs  policy_coverage.rs  policy_evolution.rs  reload_resilience.rs  schema_hash.rs  security.rs  stress.rs  tier_gating.rs  validate_policies.rs
pdp/tests/common/: mod.rs
policies/: api_gateway.cedarschema  data_scope_access.cedar  org_scoped_access.cedar  rbac_route_access.cedar  subscription_tier_gating.cedar  suspended_account_deny.cedar  template_resource_access.cedar
(+38 files in other folders)
