[package]
name = "cedar-pdp"
version = "0.1.0"
edition = "2024"

[dependencies]
cedar-policy = "4"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
arc-swap = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "7"
sha2 = "0.10"
rayon = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"

[[bench]]
name = "cedar_eval"
harness = false

[[bench]]
name = "hierarchy_depth"
harness = false

[[example]]
name = "memory_scaling"
